platform/k8s/base/services/pricing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing
  namespace: atlas
  labels:
    app: pricing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: pricing
        component: backend
    spec:
      containers:
        - name: pricing
          image: nitros64/pricing-service:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
              name: http
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8086
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
