platform/k8s/base/services/pricing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
spec:
  selector:
    app: pricing
  ports:
    - name: http
      port: 80
      targetPort: 8086
  type: ClusterIP
